# Wordle_UI

./: Cargo.toml  README.md  theme.toml
src/: check_word.rs  main.rs  state.json
