[package]
name = "t"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
rand = "0.8.5"
serde = "1.0.117"
serde_derive = "1.0.117"
serde_json = "1.0.59"
crossterm = "0.25"
cursive = { version = "0.19.0", features = ["toml"] }
